
Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
------------------------------

Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
------------------------------
#1248366 by Dave Reid: Fix declaration of getInfo() test functions.
#1219178 by cpliakas: Added support for customizable minimum facet counts.
#1216184 by cpliakas: remove unneeded static variable.
#1204450 by blazey: fix for parameter error in apachesolr_taxonomy module.
#1150174 by mr.andrey, pwolanin: Strip content of script and similar tags when indexing.
#1183742 by MrHaroldA, pwolanin: Index all numeric field API fields by default.
#1188614 by ASupinski: Expand Hook_Hook_Info to include other hooks.

Apache Solr integration 7.x-1.0-beta8, 2011-06-13
------------------------------
#1174960 by pwolanin: fix critical indexing bug from DBTNG error in apachesolr_cron_check_node_table().
#1148612 by pwolanin: fix regression; Clicking "Relevancy" has no effect after choosing another sort.

Apache Solr integration 7.x-1.0-beta7, 2011-05-24
------------------------------
#1162600 by pwolanin: Display an error if the schema version in use is incompatible.
#1162078 by jpmckinney: fix for Undefined variable: stats_summary.
#1159172 by jpmckinney: Remove unused facet functions.
#1167172 by cpliakas: Improve the breadcrumb handling for facet settings forms.
#1157864 by cpliakas: Integrate with Facet API's depencency plugin system.
#912758  by pwolanin: use Facet API's support for faceting missing values.
#1098860 by jpmckinney: Add apachesolr_cron_check_node_table back to cron.
#1159172 by cpliakas: Remove unused facet functions.
#926564  by jpmckinney: Add get_subqueries().
#1064972 by jpmckinney: Use is_callable not function_exists, where applicable.
#1097988 by pwolanin: Add omitHeader to save on bandwidth.
#1154770 by jpmckinney, pwolanin: Must double quote filter query values if containing space or colon.
#1152382 by cpliakas, pwolanin: Modify Facet API adapter for api changes.